[tool.poetry]
name = "raftos-plus"
version = "0.1.0"
description = ""
authors = ["redat00 <reno@redat.me>"]
readme = "README.md"
packages = [{include = "raftos_plus"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
cryptography = "^41.0.3"
msgpack-python = "^0.5.6"


[tool.poetry.group.dev.dependencies]
pytype = "^2023.8.31"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-isort = "^6.0.0"
pytest = "^7.4.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
include_trailing_comma = true
import_heading_stdlib = "Python Standard Library"
import_heading_firstparty = "First Party"
import_heading_thirdparty = "Third Party"
use_parentheses = true
force_sort_within_sections = false
from_first = false
force_grid_wrap = 0